# bridgewatch

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
bridgewatch/: __init__.py  adapters.py  api.py  auth.py  cli.py  config.py  db.py  models.py  pipeline.py  retry.py  validation.py
docs/: architecture.md  operating-model.md
docs/adr/: 0001-sqlite-operational-store.md  0002-deterministic-validation.md
docs/runbooks/: invalid-financial-value.md  missing-reference.md  retry-exhausted.md  stale-event.md  validation-failure.md
scripts/: smoke.sh
static/: app.js  index.html  styles.css
tests/: test_api.py  test_pipeline.py  test_retry.py  test_validation.py
