[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "bridgewatch"
version = "0.1.0"
description = "Enterprise integration reliability workspace for validating, monitoring, retrying, and documenting cross-system data flows."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Amal Farhad Shaji" }]
dependencies = [
  "fastapi>=0.110",
  "uvicorn>=0.27",
  "pydantic>=2.6"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "httpx>=0.27"
]

[project.scripts]
bridgewatch = "bridgewatch.cli:main"

[tool.setuptools.packages.find]
include = ["bridgewatch*"]

